--- a/themes/default/layouts/publicacion.htm
+++ b/themes/default/layouts/publicacion.htm
@@ -46,41 +46,41 @@ code = "redes-sociales"
         $this['urlPage'] = $this->page->url;
 
         if($this->page->apiBag){
-            
+
             if(isset($this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"])){
                 $this['metaImg'] = $this->page->apiBag["staticPage"]->attributes["viewBag"]["cover"];
             }
-            
+
             if($this->page->settings["meta_title"]==null){
-                
+
                 $this['metaTitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
                 $this['ptitle'] = 'Cádiz | '.$this->page->apiBag["staticPage"]->attributes["viewBag"]["title"];
-                
+
             } else {
-               
+
                 $this['metaTitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
                 $this['ptitle'] = 'Cádiz | '.$this->page->settings["meta_title"];
             }
 
             if($this->page->settings["meta_description"]==null){
-                
+
                 $this['metaDescription'] = $this->page->apiBag["staticPage"]->attributes["content"];
-            
+
                 if(isset(explode('<p class="desc">',$this['metaDescription'])[1])){
-                    
+
                     $this['metaDescription'] = explode('</p>',explode('<p class="desc">',$this['metaDescription'])[1])[0];
 
                     if(strlen($this['metaDescription'])>225){
                         $this['metaDescription'] = substr($this['metaDescription'], 0, 225).'...';
                     }
-                
+
                 } else {
-                    
+
                      $this['metaDescription'] = '';
                 }
-            
+
             } else {
-               $this['metaDescription'] = $this->page->settings["meta_description"];   
+               $this['metaDescription'] = $this->page->settings["meta_description"];
             }
         }
     }
@@ -89,13 +89,13 @@ code = "redes-sociales"
 
         $pag = $_POST['ipag'];
         $numberReg = $_POST['inumberReg'];
-        
+
         $this['startPag'] = $_POST['ipag'];
         $this['numberReg'] = 9;
-        
+
         $this['numPag'] = ceil($this->staticApp->publicationListCount()/$this['numberReg']);
         $this['publications'] = $this->staticApp->publicationListPag($pag,$numberReg);
-        
+
         return [
             '#prtlPagination' => $this->renderPartial('pagination'),
             '#prtlPublications' => $this->renderPartial('publications')
@@ -129,7 +129,7 @@ code = "redes-sociales"
     <link rel="mask-icon" href="{{url('/')}}/plugins/rainlab/pages/assets/img/favicons/safari-pinned-tab.svg" color="#175DA3">
     <meta name="theme-color" content="#175DA3">
 </head>
-
+    {% partial 'device-rotate' %}
     {% partial 'site/header' %}
 
     {% component 'staticPage' %}
@@ -140,12 +140,12 @@ code = "redes-sociales"
         </div>
     </div>
 
-    <div id='prtlPagination'>       
+    <div id='prtlPagination'>
         {% partial "pagination" %}
     </div>
 
-   
-    
+
+
 
 
 
