--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4703,7 +4703,8 @@ footer {
       display: none;
     }
   }
-  header, main, nav, #layout-content, footer, div[class^="header"], .all-events, .all-exps, .section-txt, .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure {
+  header, main, nav, #layout-content, footer, div[class^="header"], .all-events, .all-exps, .section-txt,
+  .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure, .header, .header-empresa, .header-event, .header-experience, .header-ruta, .header-village, .header-general, .img-village, .featured-element, .secret-routes {
     display: none !important;
   }
 }
