--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3795,7 +3795,8 @@ footer {
       margin-bottom: 40px; }
     .device-rotation .tablet-info {
       display: none; }
-  header, main, nav, #layout-content, footer, div[class^="header"], .all-events, .all-exps, .section-txt, .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure {
+  header, main, nav, #layout-content, footer, div[class^="header"], .all-events, .all-exps, .section-txt,
+  .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure, .header, .header-empresa, .header-event, .header-experience, .header-ruta, .header-village, .header-general, .img-village, .featured-element, .secret-routes {
     display: none !important; } }
 
 @media (max-device-width: 1024px) and (min-device-width: 813px) and (orientation: landscape) {
