--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3798,7 +3798,8 @@ footer {
   header, main, nav, #layout-content, footer, div[class^="header"], .all-events, .all-exps, .section-txt,
   .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure, .header,
   .header-empresa, .header-event, .header-experience, .header-ruta, .header-village, .header-general,
-  .img-village, .featured-element, .secret-routes, .vertical-share, #out-features, .send-info-container {
+  .img-village, .featured-element, .secret-routes, .vertical-share, #out-features, .send-info-container, .icons-row, #map,
+  .static-header, .somos-section, .somos-txt-container {
     display: none !important; } }
 
 @media (max-device-width: 1024px) and (min-device-width: 813px) and (orientation: landscape) {
