--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4706,7 +4706,8 @@ footer {
   header, main, nav, #layout-content, footer, div[class^="header"], .all-events, .all-exps, .section-txt,
   .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure, .header,
   .header-empresa, .header-event, .header-experience, .header-ruta, .header-village, .header-general,
-  .img-village, .featured-element, .secret-routes, .vertical-share, #out-features, .send-info-container {
+  .img-village, .featured-element, .secret-routes, .vertical-share, #out-features, .send-info-container, .icons-row, #map,
+  .static-header, .somos-section, .somos-txt-container {
     display: none !important;
   }
 }
