--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4707,7 +4707,7 @@ footer {
   .section-txt-village, .section-img, .more-popular, .section-txt-comarca, .static-structure, .header,
   .header-empresa, .header-event, .header-experience, .header-ruta, .header-village, .header-general,
   .img-village, .featured-element, .secret-routes, .vertical-share, #out-features, .send-info-container, .icons-row, #map,
-  .static-header, .somos-section, .somos-txt-container {
+  .static-header, .somos-section, .somos-txt-container, .ways, .ayuda-header, .publicaciones {
     display: none !important;
   }
 }
