--- a/themes/default/partials/events.htm
+++ b/themes/default/partials/events.htm
@@ -37,7 +37,7 @@
               <img class="separator" src="{{preurl}}/storage/app/media/uploaded-files/templates/small-yellow-separator.svg">
               <div class="icons">
                 <div class="icon-pair">
-                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{event.viewBag.category}}.svg">
+                  <img src="{{preurl}}/storage/app/media/uploaded-files/templates/{{str_slug(event.viewBag.category)}}.svg">
                   <p class="icon-txt">{{event.viewBag.category}}</p>
                 </div>
                 <div class="icon-pair">
