--- a/themes/default/partials/site/searchevent.htm
+++ b/themes/default/partials/site/searchevent.htm
@@ -47,7 +47,7 @@
             <form data-request="onFindEvent">
               <div class="inputs-container">
                 <div id="event-category" class="days-container">
-                  <select class="custom-select select-days" name="category">
+                  <select id="sltCategory" class="custom-select select-days" name="category">
                     {% for key,value in categories %}
                         <option value="{{key}}">{{ value |_ }}</option>
                     {% endfor %}
@@ -56,12 +56,12 @@
                   <span class="select-title">{{ 'CATEGORÍA'|_ }}</span>
                 </div>
                 <div id="event-datepicker" class="interests-container">
-                  <input type="text" name="datepicker" id="datepicker" readonly>
+                  <input id="inpDate" type="text" name="datepicker" id="datepicker" readonly>
                   <span class="select-title">{{ 'FECHA'|_ }}</span>
                   <img class="arrow" src="{{preurl}}/storage/app/media/uploaded-files/templates/select-arrow.svg">
                 </div>
                 <div id="event-location" class="type-container">
-                  <select class="custom-select select-type" name="location">
+                  <select id="sltLocationEvent" class="custom-select select-type" name="location">
                     {% for key,value in municipalities %}
                         <option value="{{key}}">{{value}}</option>
                     {% endfor %}
@@ -71,7 +71,7 @@
                 </div>
               </div>
               <div class="button-container">
-                <input type="submit" value="{{ 'Ver eventos'|_ }}">
+                <input id="bscEvento" type="submit" value="{{ 'Ver eventos'|_ }}">
               </div>
             </form>
           </div>
