--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -206,8 +206,8 @@ code = "redes-sociales"
             var type = $('#sltType');
             
             var chgUrl = window.location.href
-            var purl = chgUrl.split('cadizturismo/');
-            var baseUrl = purl[0]+'cadizturismo/';
+            var purl = chgUrl.split('cadizturismo');
+            var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
 
@@ -249,8 +249,8 @@ code = "redes-sociales"
             }
 
             var chgUrl = window.location.href
-            var purl = chgUrl.split('cadizturismo/');
-            var baseUrl = purl[0]+'cadizturismo/';
+            var purl = chgUrl.split('cadizturismo');
+            var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
             
@@ -280,8 +280,8 @@ code = "redes-sociales"
             var sLocation = slugIn(location.val());
            
             var chgUrl = window.location.href
-            var purl = chgUrl.split('cadizturismo/');
-            var baseUrl = purl[0]+'cadizturismo/';
+            var purl = chgUrl.split('cadizturismo');
+            var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
             
@@ -319,8 +319,8 @@ code = "redes-sociales"
            
 
             var chgUrl = window.location.href
-            var purl = chgUrl.split('cadizturismo/');
-            var baseUrl = purl[0]+'cadizturismo/';
+            var purl = chgUrl.split('cadizturismo');
+            var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
             
