--- a/themes/default/partials/device-rotate.htm
+++ b/themes/default/partials/device-rotate.htm
@@ -1,5 +1,4 @@
 <div class="device-rotation">
   <img src="{{url('/')}}/plugins/rainlab/pages/assets/svg/device-rotate.svg" alt="">
-  <p class="movil-info">Gira tu móvil para una experiencia óptima</p>
-  <p class="tablet-info">Gira tu tablet para una experiencia óptima</p>
+  <p class="movil-info">Gira tu dispositivo para una experiencia óptima</p>
 </div>
