--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3812,4 +3812,10 @@ table {
       font-size: 18px;
       line-height: 33px;
       font-weight: 300;
-      color: #232323; }
+      color: #232323;
+      padding-right: 11px;
+      padding-left: 5px; }
+    table tr th {
+      font-size: 18px;
+      background-color: #CECECE;
+      padding: 5px 11px 5px 5px; }
