--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4723,6 +4723,13 @@ table {
       line-height: 33px;
       font-weight: 300;
       color: #232323;
+      padding-right: 11px;
+      padding-left: 5px;
+    }
+    th {
+      font-size: 18px;
+      background-color: #CECECE;
+      padding: 5px 11px 5px 5px;
     }
   }
 }
