--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4739,3 +4739,9 @@ iframe {
   margin-bottom: 75px;
   margin-top: 35px;
 }
+
+video {
+  max-width: 90%;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
