--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4741,7 +4741,8 @@ iframe {
 }
 
 video {
+  width: auto;
   max-width: 90%;
-  margin-bottom: 30px;
-  margin-top: 30px;
+  margin: 20px auto;
+  display: table;
 }
