--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3803,6 +3803,23 @@ footer {
     display: none !important; } }
 
 /* TABLAS */
+table:not(.pika-table) {
+  margin-top: 50px;
+  margin-bottom: 50px; }
+  table:not(.pika-table) tr {
+    border-bottom: 1px solid #CECECE; }
+    table:not(.pika-table) tr td {
+      font-size: 18px;
+      line-height: 33px;
+      font-weight: 300;
+      color: #232323;
+      padding-right: 11px;
+      padding-left: 5px; }
+    table:not(.pika-table) tr th {
+      font-size: 18px;
+      background-color: #CECECE;
+      padding: 5px 11px 5px 5px; }
+
 iframe {
   max-width: 100%;
   margin-bottom: 75px;
