--- a/plugins/rainlab/pages/assets/scss/style.scss
+++ b/plugins/rainlab/pages/assets/scss/style.scss
@@ -4713,26 +4713,26 @@ footer {
 
 
 /* TABLAS */
-// table {
-//   margin-top: 50px;
-//   margin-bottom: 50px;
-//   tr {
-//     border-bottom: 1px solid #CECECE;
-//     td {
-//       font-size: 18px;
-//       line-height: 33px;
-//       font-weight: 300;
-//       color: #232323;
-//       padding-right: 11px;
-//       padding-left: 5px;
-//     }
-//     th {
-//       font-size: 18px;
-//       background-color: #CECECE;
-//       padding: 5px 11px 5px 5px;
-//     }
-//   }
-// }
+table:not(.pika-table) {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  tr {
+    border-bottom: 1px solid #CECECE;
+    td {
+      font-size: 18px;
+      line-height: 33px;
+      font-weight: 300;
+      color: #232323;
+      padding-right: 11px;
+      padding-left: 5px;
+    }
+    th {
+      font-size: 18px;
+      background-color: #CECECE;
+      padding: 5px 11px 5px 5px;
+    }
+  }
+}
 
 iframe {
   max-width: 100%;
