--- a/plugins/rainlab/pages/assets/css/style.css
+++ b/plugins/rainlab/pages/assets/css/style.css
@@ -3803,19 +3803,19 @@ footer {
     display: none !important; } }
 
 /* TABLAS */
-table:not(.pika-table) {
+table:not(.pika-table), table:not(.table-condensed) {
   margin-top: 50px;
   margin-bottom: 50px; }
-  table:not(.pika-table) tr {
+  table:not(.pika-table) tr, table:not(.table-condensed) tr {
     border-bottom: 1px solid #CECECE; }
-    table:not(.pika-table) tr td {
+    table:not(.pika-table) tr td, table:not(.table-condensed) tr td {
       font-size: 18px;
       line-height: 33px;
       font-weight: 300;
       color: #232323;
       padding-right: 11px;
       padding-left: 5px; }
-    table:not(.pika-table) tr th {
+    table:not(.pika-table) tr th, table:not(.table-condensed) tr th {
       font-size: 18px;
       background-color: #CECECE;
       padding: 5px 11px 5px 5px; }
