--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -43,6 +43,13 @@
 	              			{{empresa.municipality | capitalize}}
 						</p>
 					</div>
+					<div class="icon-pair">
+						<img src="{{preurl}}/storage/app/media/uploaded-files/templates/extract.svg" class="fr-fil fr-dib">
+
+						<p class="icon-txt">
+	              			{{empresa.extract | capitalize}}
+						</p>
+					</div>
 				</div>
 				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}/empresa/{{empresa.slug}}">{{'Ver empresa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
 			</div>
