--- a/themes/default/layouts/dinamic.htm
+++ b/themes/default/layouts/dinamic.htm
@@ -204,7 +204,7 @@ code = "redes-sociales"
             }
 
             var type = $('#sltType');
-            
+
             var chgUrl = window.location.href
             var purl = chgUrl.split('cadizturismo');
             var baseUrl = purl[0]+'cadizturismo';
@@ -223,6 +223,10 @@ code = "redes-sociales"
             nurl = nurl.replace( isearch, searchMlt);
 
             history.pushState(null, "", baseUrl+nurl);
+
+            $('html, body').animate({
+                  scrollTop: $("#st-empresas").offset().top
+              }, 2000);
 
         });
 
@@ -253,7 +257,7 @@ code = "redes-sociales"
             var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
-            
+
             var total = arr.length;
 
             var idays = arr[total-3];
@@ -265,8 +269,6 @@ code = "redes-sociales"
             nurl = nurl.replace( itvisit, sTvisit);
 
             history.pushState(null, "", baseUrl+nurl);
-
-
         });
 
         $('#prtlSearchRutas #bscRuta').on('click', function(){
@@ -278,22 +280,22 @@ code = "redes-sociales"
             var sCategory = slugIn(category.val());
             var sDays = slugIn(days.val());
             var sLocation = slugIn(location.val());
-           
+
             var chgUrl = window.location.href
             var purl = chgUrl.split('cadizturismo');
             var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
-            
+
             var total = arr.length;
 
             var icategory = arr[total-3];
             var idays = arr[total-2];
             var ilocation = arr[total-1];
 
-            var nurl = url.replace( icategory, sCategory); 
-            nurl = nurl.replace( idays, sDays); 
-            nurl = nurl.replace( ilocation, sLocation); 
+            var nurl = url.replace( icategory, sCategory);
+            nurl = nurl.replace( idays, sDays);
+            nurl = nurl.replace( ilocation, sLocation);
 
             history.pushState(null, "", baseUrl+nurl);
 
@@ -313,17 +315,17 @@ code = "redes-sociales"
 
             var dayss = sDays.split(' - ');
             var dstart = dayss[0].replace( '.', '-');
-            dstart = dstart.replace( '.', '-20');  
+            dstart = dstart.replace( '.', '-20');
             var dend = dayss[1].replace( '.', '-');
             dend = dend.replace( '.', '-20');
-           
+
 
             var chgUrl = window.location.href
             var purl = chgUrl.split('cadizturismo');
             var baseUrl = purl[0]+'cadizturismo';
             var url = purl[1];
             var arr = url.split('/');
-            
+
             var total = arr.length;
 
             var icategory = arr[total-4];
@@ -331,10 +333,10 @@ code = "redes-sociales"
             var idend = arr[total-2];
             var ilocation = arr[total-1];
 
-            var nurl = url.replace( icategory, sCategory); 
-            nurl = nurl.replace( idstart, dstart); 
+            var nurl = url.replace( icategory, sCategory);
+            nurl = nurl.replace( idstart, dstart);
             nurl = nurl.replace( idend, dend);
-            nurl = nurl.replace( ilocation, sLocation); 
+            nurl = nurl.replace( ilocation, sLocation);
 
             history.pushState(null, "", baseUrl+nurl);
 
