--- a/themes/default/partials/empresas.htm
+++ b/themes/default/partials/empresas.htm
@@ -43,6 +43,7 @@
 	              			{{empresa.municipality | capitalize}}
 						</p>
 					</div>
+					{% if empresa.extract %}
 					<div class="icon-pair">
 						<img src="{{preurl}}/storage/app/media/uploaded-files/templates/extract.svg" class="fr-fil fr-dib">
 
@@ -50,6 +51,7 @@
 	              			{{empresa.extract | capitalize}}
 						</p>
 					</div>
+					{% endif %}
 				</div>
 				<div class="button-container"><a class="see-event" href="{{url('/')}}/{{lang}}/empresa/{{empresa.slug}}">{{'Ver empresa'|_}} <img src="{{preurl}}/storage/app/media/uploaded-files/templates/link-icon.svg" class="fr-fic fr-dii"></a></div>
 			</div>
